--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
-name: zap_client
-description: A client for Zap server or Zap Adapters, this is part of ZapTools Proyect
-version: 0.0.3
-repository: https://github.com/NathanDraco22/zap-client-dart
-
+name: zaptools
+description: A starting point for Dart libraries or applications.
+version: 1.0.0
+# repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.16.1 <3.0.0'
+  sdk: ^3.0.5
 
+# Add regular dependencies here.
 dependencies:
-  web_socket_channel: ^2.1.0
+  # path: ^1.8.0
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.16.0
+  lints: ^2.0.0
+  test: ^1.21.0
