--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  uuid: ^4.1.0
   web_socket_channel: ^2.4.0
 # path: ^1.8.0
 dev_dependencies:
