--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,11 @@ name: zaptools
 description: A toolkit for Event-Driven websocket management.
 version: 0.1.0
 repository: https://github.com/NathanDraco22/zaptools-dart
+topics:
+  - server
+  - websocket
+  - client
+
 environment:
   sdk: ^3.0.0
 
