--- a/packages/zaptools_client/pubspec.yaml
+++ b/packages/zaptools_client/pubspec.yaml
@@ -1,10 +1,13 @@
 name: zaptools_client
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+description: A toolkit for Event-Driven websocket management.
+version: 0.1.0
+repository: https://github.com/NathanDraco22/zaptools-dart
+topics:
+  - websocket
+  - client
 
 environment:
-  sdk: ^3.1.3
+  sdk: ^3.0.0
 
 # Add regular dependencies here.
 dependencies:
