--- a/packages/zaptools_server/pubspec.yaml
+++ b/packages/zaptools_server/pubspec.yaml
@@ -15,5 +15,8 @@ dependencies:
   web_socket_channel: ^2.4.0
 
 dev_dependencies:
+  alfred: ^1.1.1
   lints: ^2.0.0
   test: ^1.21.0
+  build_runner: ^2.4.6
+  mockito: ^5.4.2
