--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
 
+pubspec_overrides.yaml
+*.iml
+
 server.py
 __pycache__
